[project]
name = "tachikoma-mcp-python"
version = "0.1.0"
description = "Tachikoma MCP Server - Research-Informed Implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[server]>=1.26.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tachikoma-mcp-python = "tachikoma_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tachikoma_mcp"]